tests/errors/test_simple_error.mob
// Simple error test
func test_func() {
    print("About to divide by zero");
    return 1 / 0;
}

test_func();
